--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 body {
   margin: 0;
   
@@ -10,7 +12,8 @@ body {
   height: 100vh;
   background-color: #1B191A;
   color: rgb(46, 40, 55);
-  font-family: Arial, sans-serif; 
+  font-family: 'Maven Pro', sans-serif;
+
 }
 
 @font-face {
