--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,13 +28,13 @@ body {
 
 @font-face {
   font-family: 'Engramma';
-  src: url('../Engramma.ttf') format('truetype');
+  src: url('../Engramma.woff2') format('truetype');
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Coco';
-  src: url('../Cocogoose-Pro-Ultralight.ttf') format('truetype');
+  src: url('../Cocogoose-Pro-Ultralight.woff2') format('truetype');
   font-display: swap;
 }
 
